# its4assagnment

./: CMakeLists.txt  main.c  main.h  notionSecondEdition  reame.md
caesar/: CaesarCipher.cpp  CaesarCipher.h  CipherManager.cpp  CipherManager.h  CryptographyService.cpp  CryptographyService.h  DataTypeHandler.cpp  DataTypeHandler.h  FileManager.cpp  FileManager.h  InputHandler.cpp  InputHandler.h  TextBuffer.cpp  TextBuffer.h  TextEditorEncryption.cpp  caesar_dll.c  encryption_interface.cpp  encryption_interface.h  encryption_manager.cpp  encryption_manager.h
cpp/: additionalFunctionallity.cpp
